--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -9,3 +9,13 @@
     list-style: none;
   }
 }
+
+.title-of-category {
+  text-align: left;
+  color: #218838;
+  span {
+    font-size: .8rem;
+    margin: 0 .5rem;
+    color: #464d47;
+  }
+}
