--- a/src/components/Home/NavCategories/index.scss
+++ b/src/components/Home/NavCategories/index.scss
@@ -1,25 +1,62 @@
-.categories-list {
+.container-categories {
+  width: 30%;
+  height: 100%;
   display: flex;
-  flex-flow: column wrap;
   justify-content: flex-start;
   align-items: flex-start;
-  width: 90%;
-  min-height: 80vh;
-  margin: 0;
-  padding: 0;
-  .list__main-item {
-    text-align: left;
-    padding-left: 1rem;
-    width: 95%;
-    span {
-      margin-right: 1rem;
-    }
-    .displayNone {
-      display: none;
-    }
-    .sub-list {
-      .sub-list__item {
-
+  background-color: rgba(0, 0, 0, 0.048);
+  .categories-list {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: flex-start;
+    align-items: center;
+    width: 90%;
+    height: 100%;
+    min-height: 80vh;
+    margin: 0;
+    padding: 0;
+    margin-top: 2rem;
+    list-style: none;
+    .list__main-item {
+      margin-top: 0.5rem;
+      padding: 3px 0;
+      border-bottom: 3px solid rgb(255, 222, 89);
+      text-align: left;
+      padding-left: 1rem;
+      width: 95%;
+      font-size: 1.2rem;
+      color: #218838;
+      font-weight: 700;
+      cursor: pointer;
+      span {
+        margin-right: 1rem;
+      }
+      .container-for-svg {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        width: 1rem;
+        height: 1rem;
+        border-radius: 50%;
+        background-color: rgb(255, 222, 89);
+        font-size: 0.8rem;
+      }
+      .sub-list {
+        max-height: 0px;
+        overflow: hidden;
+        -webkit-transition: max-height .5s linear;
+        -moz-transition: max-height .5s linear;
+        transition: max-height .5s linear;
+        .sub-list__item {
+          .nav__link {
+            text-decoration: none;
+            color: #218838;
+            border-bottom: 3px solid rgb(255, 222, 89);
+          }
+        }
+      }
+      .displayNone {
+        max-height: 1000px;
       }
     }
   }
