--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -1,12 +1,50 @@
+#root {
+  max-width: 1400px;
+  margin: 0 auto;
+  background-color: #ffffff;
+  -webkit-box-shadow: 2px -10px 76px 24px rgba(33,136,56,1);
+-moz-box-shadow: 2px -10px 76px 24px rgba(33,136,56,1);
+box-shadow: 2px -10px 76px 24px rgba(33,136,56,1);
+}
+
 .header {
-  height: 10vh;
+  height: 5rem;
   background-color: #218838;
+  padding-bottom: 3px;
+  border-bottom: 7px solid rgb(255, 222, 89);
+  border-bottom-left-radius: 5px;
+  -webkit-box-shadow: 0px 10px 6px 0px rgba(255, 222, 89, 0.38);
+  -moz-box-shadow: 0px 10px 6px 0px rgba(255, 222, 89, 0.38);
+  box-shadow: 0px 10px 6px 0px rgba(255, 222, 89, 0.38);
   .container-nav {
+    display: flex;
+    justify-content: space-between;
     .container-nav__link {
       font-size: 2rem;
+      text-decoration: none;
     }
     .nav-logo {
-      height: 10vh;
+      height: 5rem;
+      margin-left: 14rem;
+    }
+    .nav-cart {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      height: 100%;
+      background-color: rgb(255, 222, 89);
+      padding: 0 1rem;
+      border-bottom: 7px solid #218838;
+      border-bottom-right-radius: 5px;
+      -webkit-box-shadow: 0px 10px 6px 0px #21883765;
+      -moz-box-shadow: 0px 10px 6px 0px #21883765;
+      box-shadow: 0px 10px 6px 0px #21883765;
+      color: #218838;
+      font-size: 2rem;
+      span {
+        text-decoration: none;
+        font-size: 1rem;
+      }
     }
   }
 }
