--- a/src/components/Search/search.scss
+++ b/src/components/Search/search.scss
@@ -1,10 +1,13 @@
 .container-for-search-bar {
-  margin-top: 2rem;
+  margin: 2rem 0;
+  position: relative;
   .search-bar {
     width: 40vw;
     height: 3rem;
     font-size: 1.2rem;
     border: 3px solid #218838;
+    border-top-color: rgb(255, 222, 89);
+    border-left-color: rgb(255, 222, 89);
     border-radius: 2rem;
     outline: none;
     padding: 1rem;
@@ -14,8 +17,8 @@
     font-size: 1.5rem;
     color: #218838;
     position: absolute;
-    right: 21%;
-    top: 17%;
+    right: 3%;
+    top: 30%;
   }
 }
 
