--- a/src/components/Home/NavCategories/index.scss
+++ b/src/components/Home/NavCategories/index.scss
@@ -1,10 +1,11 @@
 .container-categories {
   width: 30%;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
   background-color: rgba(0, 0, 0, 0.048);
+  padding-bottom: 2rem;
   .categories-list {
     display: flex;
     flex-flow: column wrap;
@@ -28,6 +29,10 @@
       color: #218838;
       font-weight: 700;
       cursor: pointer;
+      .nav__link {
+        text-decoration: none;
+        color: #218838;
+      }
       span {
         margin-right: 1rem;
       }
@@ -44,19 +49,28 @@
       .sub-list {
         max-height: 0px;
         overflow: hidden;
-        -webkit-transition: max-height .5s linear;
-        -moz-transition: max-height .5s linear;
-        transition: max-height .5s linear;
+        padding: 0;
+        font-size: 1rem;
+        -webkit-transition: max-height 0.5s linear;
+        -moz-transition: max-height 0.5s linear;
+        transition: max-height 0.5s linear;
         .sub-list__item {
           .nav__link {
             text-decoration: none;
             color: #218838;
-            border-bottom: 3px solid rgb(255, 222, 89);
+            svg {
+              font-size: .7rem;
+            }
           }
         }
       }
       .displayNone {
         max-height: 1000px;
+      }
+    }
+    @media screen and (max-width: 1100px){
+      .list__main-item {
+        font-size: 1rem;
       }
     }
   }
