--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -2,14 +2,14 @@
   max-width: 1400px;
   margin: 0 auto;
   background-color: #ffffff;
-  -webkit-box-shadow: 2px -10px 76px 24px rgba(33,136,56,1);
--moz-box-shadow: 2px -10px 76px 24px rgba(33,136,56,1);
-box-shadow: 2px -10px 76px 24px rgba(33,136,56,1);
+  -webkit-box-shadow: 2px -10px 76px 24px rgba(33, 136, 56, 1);
+  -moz-box-shadow: 2px -10px 76px 24px rgba(33, 136, 56, 1);
+  box-shadow: 2px -10px 76px 24px rgba(33, 136, 56, 1);
 }
 
 .header {
   height: 5rem;
-  background-color: #218838;
+  background-color: #218837;
   padding-bottom: 3px;
   border-bottom: 7px solid rgb(255, 222, 89);
   border-bottom-left-radius: 5px;
@@ -65,6 +65,59 @@ box-shadow: 2px -10px 76px 24px rgba(33,136,56,1);
     .input-group {
       width: 60%;
       margin-top: 1.5rem;
+    }
+  }
+}
+
+// Footer
+
+.footer {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  background-color: #00000050;
+  color: #218838;
+  font-weight: 700;
+  .footer__main {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    .main__left {
+      display: flex;
+      flex-flow: column wrap;
+      justify-content: center;
+      align-items: center;
+      padding: 3rem 10% 3rem 5%;
+      background-color: rgba(255, 222, 89, 0.671);
+      .left__title {
+        border-bottom: 3px solid rgb(255, 222, 89);
+        font-weight: 700;
+      }
+      .left__list_of_links {
+        padding: 0;
+        a {
+          color: #218838;
+        }
+      }
+    }
+    .main__right {
+      display: flex;
+      flex-flow: column wrap;
+      justify-content: center;
+      align-items: center;
+      width: 60%;
+    }
+  }
+  .sub-information {
+    background-color: #218837a2;
+    width: 100%;
+    div {
+      color: #00000073;
+      margin: 1rem;
+      padding: 1rem;
     }
   }
 }
