--- a/src/components/Home/NavCategories/index.scss
+++ b/src/components/Home/NavCategories/index.scss
@@ -12,7 +12,6 @@
     justify-content: flex-start;
     align-items: center;
     width: 90%;
-    height: 100%;
     min-height: 80vh;
     margin: 0;
     padding: 0;
@@ -64,7 +63,7 @@
           }
         }
       }
-      .displayNone {
+      .maxHeight {
         max-height: 1000px;
       }
     }
@@ -73,5 +72,41 @@
         font-size: 1rem;
       }
     }
+    @media screen and (max-width: 425px) {
+      .list__main-item {
+        font-size: .8rem;
+        .sub-list__item {
+          .nav__link {
+            font-size: .8rem;
+            svg {
+              font-size: .5rem;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container-categories {
+    width: 100%;
+    left: 0;
+    min-height: 0;
+    background: none;
+    .categories-list {
+      margin-top: 0;
+    }
+    .fa-times {
+      font-size: 1.5rem;
+      color: #218838;
+      position: absolute;
+      top: 3%;
+      right: 3%;
+    }
+  }
+  .displayFlex {
+    display: flex;
+    justify-content: flex-start;
   }
 }
