--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -22,10 +22,16 @@
     .container-nav__link {
       font-size: 2rem;
       text-decoration: none;
+      .nav-logo {
+        height: 5rem;
+      }
     }
-    .nav-logo {
-      height: 5rem;
+    .margin-left {
       margin-left: 14rem;
+    }
+    .container_for_instruments {
+      display: flex;
+      flex-flow: row nowrap;
     }
     .nav-cart {
       display: flex;
@@ -46,6 +52,67 @@
         font-size: 1rem;
       }
     }
+    @media screen and (max-width: 768px) {
+      .nav-cart {
+        border-bottom-left-radius: 5px;
+      }
+    }
+  }
+  @media screen and (max-width: 768px) {
+    .container-nav {
+      .container-nav__link {
+        margin-left: 0;
+        .nav-link__menu {
+          margin: 0.8rem;
+          font-size: 3rem;
+          color: rgb(255, 222, 89);
+        }
+      }
+      .nav-cart {
+        span {
+          display: flex;
+          justify-content: center;
+          position: relative;
+          top: 10px;
+          right: 10px;
+          align-items: center;
+          width: 1.3rem;
+          height: 1.3rem;
+          border-radius: 50%;
+          background-color: #218838;
+          color: #ffde59;
+        }
+      }
+    }
+  }
+}
+//header media
+@media screen and (max-width: 425px) {
+  .header {
+    height: 3rem;
+    .container-nav {
+      height: 3rem;
+      .container-nav__link {
+        .nav-link__menu {
+          margin: 0.5rem;
+          font-size: 1.5rem;
+        }
+        .nav-logo {
+          height: 3rem;
+        }
+      }
+      .nav-cart {
+        font-size: 1.5rem;
+        padding: 0 0.5rem;
+        span {
+          top: 10px;
+          right: 10px;
+          width: 1rem;
+          height: 1rem;
+          font-size: 0.7rem;
+        }
+      }
+    }
   }
 }
 
@@ -53,18 +120,22 @@
   min-height: 80vh;
   display: flex;
   flex-flow: row nowrap;
-  .container-categories {
-    display: flex;
-    flex-flow: column wrap;
-  }
+  justify-content: center;
+  z-index: 10;
   .container-for-main {
     width: 80%;
     display: flex;
     flex-flow: column nowrap;
+    z-index: 10;
     align-items: center;
     .input-group {
       width: 60%;
       margin-top: 1.5rem;
+    }
+  }
+  @media screen and (max-width: 768px) {
+    .container-for-main {
+      width: 100%;
     }
   }
 }
@@ -109,6 +180,18 @@
       justify-content: center;
       align-items: center;
       width: 60%;
+    }
+  }
+  @media screen and (max-width: 425px) {
+    .footer__main {
+      flex-flow: column wrap;
+      .main__right {
+        width: 100%;
+        padding: 1rem;
+      }
+      .main__left {
+       width: 100%;
+      }
     }
   }
   .sub-information {
