--- a/src/components/Products/products.scss
+++ b/src/components/Products/products.scss
@@ -89,4 +89,8 @@
   display: flex;
   justify-content: center;
   margin: 2rem 0;
+  @media screen and (max-width: 450px) {
+    margin-top: .5rem;
+    margin-bottom: 0;
+  }
 }
