--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,13 @@ a {
 ul {
   list-style: none;
 }
+
+p {
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+.row {
+  margin-right: 0 !important;
+  margin-left: 0 !important;
+}
