--- a/src/index.css
+++ b/src/index.css
@@ -20,15 +20,18 @@ body {
   left: 220px;
 }
 
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 a {
-  text-decoration: none;
+  text-decoration: none !important;
   color: #154718c0;
+}
+
+a:hover {
+  text-decoration: none !important;
 }
 
 ul {
