--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -4,6 +4,7 @@
   align-items: center;;
   text-align: left;
   color: #218838;
+  margin: 1rem 0;
   span {
     font-size: .9rem;
     margin: 0 .5rem;
