--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
   -webkit-transition: left 0.5s linear;
   -moz-transition: left 0.5s linear;
   transition: left 0.5s linear;
+  overflow-x: hidden;
 }
 
 .goLeft {
