--- a/client/src/components/Home/SortSection/sort.scss
+++ b/client/src/components/Home/SortSection/sort.scss
@@ -13,6 +13,7 @@
     color: #218838;
     font-weight: 700;
     position: relative;
+    cursor: pointer;
     span {
       color: #464d47;
       margin: 0 1rem;
@@ -58,6 +59,7 @@
     font-weight: 700;
     position: relative;
     width: 25%;
+    cursor: pointer;
     @media screen and (max-width: 768px) {
       width: 100%;
     }
